<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunApp</string>

    <!-- Main -->
    <string name="main_button_text_calories">Calculate calories</string>
    <string name="main_button_text_browse">Browse routes</string>
    <string name="main_navigation_item_title_routes">Routes</string>
    <string name="main_navigation_item_title_workouts">Workouts</string>
    <string name="main_navigation_item_title_calories">Calories</string>

    <!-- Routes -->
    <string name="route_browse_toolbar_title">Walking Routes</string>
    <string name="route_view_holder_button_text_description">Description</string>
    <string name="route_view_holder_button_text_location">Location</string>

    <!-- Workouts -->
    <string name="workout_list_toolbar_title">Workouts</string>
    <string name="workout_list_options_menu_title_sort">Sort or filter</string>
    <string name="workout_list_fab_text_start">Start</string>
    <string name="workout_list_fab_text_create">Create</string>
    <string name="workout_create_toolbar_title">New Workout</string>
    <string name="workout_create_edit_text_hint_date">Date</string>
    <string name="workout_create_edit_text_hint_label">Label</string>
    <string name="workout_create_edit_text_hint_distance">Distance</string>
    <string name="workout_create_edit_text_hint_duration">Duration</string>
    <string name="workout_create_edit_text_suffix_distance">km</string>
    <string name="workout_create_edit_text_suffix_duration">min</string>
    <string name="workout_create_button_text_create">Create</string>
    <string name="workout_create_edit_text_error_empty">Field is required</string>
    <string name="workout_create_edit_text_error_format">Wrong format</string>
    <string name="workout_start_button_text_start">Start</string>
    <string name="workout_start_button_text_finish">Finish</string>
    <string name="workout_start_button_text_cancel">Cancel</string>
    <string name="workout_start_button_text_power">Power</string>
    <string-array name="workout_toast_motivation">
        <item>Run longer! :)</item>
        <item>Run faster! :)</item>
    </string-array>
    <string name="workout_notification_channel_name">Workout tracker</string>
    <string name="workout_notification_content_title">Workout</string>
    <string name="workout_notification_content_text">
        Running application is tracking your workout.
    </string>
    <string name="workout_label">Workout</string>

    <!-- Calories -->
    <string name="calories_toolbar_title">Calories Calculator</string>
    <string name="calories_edit_text_hint_weight">Weight</string>
    <string name="calories_edit_text_hint_height">Height</string>
    <string name="calories_edit_text_hint_age">Age</string>
    <string name="calories_radio_button_text_male">Male</string>
    <string name="calories_radio_button_text_female">Female</string>
    <string name="calories_edit_text_hint_duration">Duration</string>
    <string name="calories_button_text_calculate">Calculate</string>
    <string name="calories_edit_text_suffix_weight">kg</string>
    <string name="calories_edit_text_suffix_height">cm</string>
    <string name="calories_edit_text_suffix_age">year</string>
    <string name="calories_edit_text_suffix_duration">min</string>
    <string name="calories_burned">Burned</string>
    <string name="calories_needed">Needed</string>
    <string name="calories_toast_text_error">Wrong values!</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="empty_values">Empty values not allowed.</string>
    <string name="user_created">Registration is successful.</string>
    <string name="mail_exists">There is already user with the same email.</string>
    <string name="mail_not_valid">Email is not in valid format.</string>
    <string name="username_exists">Username is not available.</string>
    <string name="password_short">Length of password must be greater than 4.</string>
    <string name="password_dont_match">Passwords do not match.</string>
    <string name="user_doesnt_exist">Username/password is wrong.</string>
    <string name="playlist">Playlist</string>
    <string name="choose_name">Choose name</string>
    <string name="create">Create</string>
    <string name="list_of_available_music">List of available music:</string>
    <string name="create_playlist">Create playlist</string>
    <string name="select_playlist">Pick</string>
    <string name="no_song">Song: </string>
    <string name="no_playlist">Playlist: </string>
    <string name="pause_button_text">|></string>
    <string name="resume_button_text">Resume</string>
    <string name="next_button_text">-></string>
    <string name="previous_button_text">"&lt;-"</string>
    <string name="steps_text">Steps: 0</string>
    <string name="sort_option">Sort?</string>
    <string name="button_ok">OK</string>
    <string name="alarm">Create notification</string>
    <string name="your_stats">Your stats</string>
    <string name="number_of_steps">Number of steps</string>
    <string name="average_time">Average time</string>
    <string name="average_distance">Average distance</string>
    <string name="challanges">Challanges:</string>
    <string name="circle">•</string>
    <string name="show">Show</string>
    <string name="logout">Logout</string>
    <string name="filter_by">Filter by:</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_on_map">Show on map</string>
    #

</resources>