<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:headerLayout="@layout/navigation_view_header">

    <group android:checkableBehavior="single">

        <item android:id="@id/nav_graph_routes"
            android:icon="@drawable/baseline_terrain_black_48"
            android:title="@string/main_navigation_item_title_routes" />

        <item android:id="@id/nav_graph_workouts"
            android:icon="@drawable/baseline_bar_chart_black_48"
            android:title="@string/main_navigation_item_title_workouts" />

        <item android:id="@id/nav_graph_calories"
            android:icon="@drawable/baseline_directions_run_black_48"
            android:title="@string/main_navigation_item_title_calories" />

        <item android:id="@id/nav_graph_navigation_playlist"
            android:icon="@drawable/library_music_black_24dp"
            android:title="@string/playlist" />

        <item android:id="@id/nav_graph_notification"
            android:icon="@drawable/notifications_black_24dp"
            android:title="@string/alarm" />

        <item android:id="@id/nav_graph_stats"
            android:icon="@drawable/bar_chart_black_24dp"
            android:title="@string/your_stats" />
    </group>

    <item android:title="@string/logout">
        <menu>
            <item android:id="@+id/logout"
                android:icon="@drawable/logout_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>