<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workouts.WorkoutStartFragment">

    <TextView
        android:id="@+id/workout_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="00:00:00.00"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:27:13.84" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/workout_start_button_text_start"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/workout_duration" />

    <Button
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:enabled="false"
        android:text="@string/workout_start_button_text_finish"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/steps_text"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"/>

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/workout_start_button_text_cancel"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/finish" />

    <TextView
        android:id="@+id/current_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_song"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/cancel"
        app:layout_constraintRight_toRightOf="@id/cancel"
        app:layout_constraintTop_toBottomOf="@id/steps"/>

    <TextView
        android:id="@+id/current_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_playlist"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/current_song"
        app:layout_constraintLeft_toLeftOf="@id/workout_duration"
        app:layout_constraintRight_toRightOf="@id/workout_duration"
    />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="0dp"
        android:freezesText="true"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/current_playlist"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"/>

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button_text"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toRightOf="@id/previous"
        app:layout_constraintBottom_toBottomOf="@id/previous"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toRightOf="@id/pause"
        app:layout_constraintBottom_toBottomOf="@id/pause"/>

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button_text"
        android:layout_marginTop="170dp"
        app:layout_constraintStart_toStartOf="@id/cancel"
        app:layout_constraintTop_toBottomOf="@id/remaining"
        />


</androidx.constraintlayout.widget.ConstraintLayout>