<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".workouts.WorkoutStats">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_stats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:textSize="32sp"
        android:layout_marginTop="40dp"

        />

    <TextView
        android:id="@+id/number_of_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/average_time"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/average_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/number_of_steps"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintRight_toLeftOf="@id/average_distance"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/average_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/average_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/label_2"
        app:layout_constraintTop_toBottomOf="@id/number_of_steps"
        android:text="@string/number_of_steps"
        />

    <TextView
        android:id="@+id/label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_1"
        app:layout_constraintTop_toBottomOf="@id/number_of_steps"
        app:layout_constraintRight_toLeftOf="@id/label_3"
        android:text="@string/average_time"
        />

    <TextView
        android:id="@+id/label_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_steps"
        android:text="@string/average_distance"
        />

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challanges"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_1"
        android:textSize="32sp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/number_of_steps_medal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header2"
        android:textSize="120sp"
        android:text="@string/circle"
        />

    <TextView
        android:id="@+id/average_time_medal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_22"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_steps_medal"
        android:textSize="120sp"
        android:text="@string/circle"
        />

    <TextView
        android:id="@+id/average_distance_medal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/label_33"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/average_time_medal"
        android:textSize="120sp"
        android:text="@string/circle"
        />

    <TextView
        android:id="@+id/label_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/number_of_steps_medal"
        app:layout_constraintTop_toBottomOf="@id/header2"
        app:layout_constraintBottom_toBottomOf="@id/number_of_steps_medal"
        />

    <TextView
        android:id="@+id/label_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/average_time_medal"
        app:layout_constraintRight_toLeftOf="@id/average_time_medal"
        app:layout_constraintBottom_toBottomOf="@id/average_time_medal"
        />



    <TextView
        android:id="@+id/label_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/average_distance_medal"
        app:layout_constraintRight_toLeftOf="@id/average_distance_medal"
        app:layout_constraintBottom_toBottomOf="@id/average_distance_medal"

        />



</androidx.constraintlayout.widget.ConstraintLayout>


